--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,11 +1,11 @@
-PORT = 
-DB_URL = 
+PORT = 8000
+DB_URL = "mongodb+srv://ecommerce:V3lATYU6uaEHsqp7@cluster0.zhncpfk.mongodb.net/ecommerce"
 JWT_SECRET_KEY = "2FxXT1NTf2K1Mo4i6AOvtdI"
 JWT_EXPIRES = 7d
-ACTIVATION_SECRET = 
-SMPT_HOST = 
-SMPT_PORT = 
-SMPT_PASSWORD = 
-SMPT_MAIL = 
-STRIPE_API_KEY = 
-STRIPE_SECRET_KEY = 
+ACTIVATION_SECRET = "z7wYOCU$RKcG#anU1b*a9SEf0X*%O#"
+SMPT_HOST = smtp.gmail.com
+SMPT_PORT = 465
+SMPT_PASSWORD = "frgskhloleriojtj"
+SMPT_MAIL = "aprincekushwaha@gmail.com"
+STRIPE_API_KEY = "pk_test_ysxDCOuzyQ1g3SeBHaddcRBn"
+STRIPE_SECRET_KEY = "sk_test_HfSsWwaS8txA47Wjcd6JBy03"
